<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CloudFile</string>
    <string name="hello_world">Hello world!</string>
    <string name="user_label">"User: "</string>
    <string name="login_btn">Login</string>
    <string name="addpath_btn">Add Path</string>
    <string name="title_activity_path_configure">PathConfigure</string>
    <string name="path_label">"Path:  "</string>
    <string name="del_file_chk">"Delete Files after:  "</string>
    <string name="cloud_path_label">Cloud Path</string>
    <string name="title_activity_file_browser">FileBrowser</string>
    <string name="reorgFldChk">Reorg Folder with File Create Date</string>
    <string name="serviceSwitch">Do Backup</string>
    <string name="title_activity_test">TestActivity</string>

    <string-array name="hours">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
    </string-array>
    <string-array name="minitues">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
    </string-array>

    <string name="title_activity_backup_item">Backup Item List</string>

    <string name="startUpload">Start Upload</string>

    <string name="stopUpload">Stop Upload</string>

    <string name="viewBakItemBtn">Show Backup Items</string>

    <string name="resetBtn">Reset All</string>

</resources>