<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/uploadStartBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="startBtnOnClick"
                android:text="@string/startUpload" />

            <Button
                android:id="@+id/stopUploadBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="stopBtnOnClick"
                android:text="@string/stopUpload" />

            <Button
                android:id="@+id/resetBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="resetOnClick"
                android:text="@string/resetBtn" />

        </LinearLayout>

        <ListView
            android:id="@+id/uploadFileList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </ListView>

    </LinearLayout>

</RelativeLayout>
