<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/user_label" />

            <TextView
                android:id="@+id/username_area"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:text="Not Login" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical" >

                <Button
                    android:id="@+id/loginBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:gravity="center_vertical|center_horizontal|right"
                    android:onClick="loginOnClick"
                    android:text="@string/login_btn" />
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/viewBakItemBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="viewBakItemOnClick"
                android:text="@string/viewBakItemBtn" />

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent" >

                <ToggleButton
                    android:id="@+id/serviceToggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="ToggleButton" />

            </FrameLayout>
        </LinearLayout>

        <Button
            android:id="@+id/addpathBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="addPathOnClick"
            android:text="@string/addpath_btn" />

        <ListView
            android:id="@+id/pathList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:longClickable="true" >
        </ListView>
    </LinearLayout>

</RelativeLayout>