<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="top|left"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/path_label" />

            <EditText
                android:id="@+id/path_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:editable="false"
                android:ems="10"
                android:onClick="startChoosePath" >

                <requestFocus />
            </EditText>
        </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/cloudPathLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cloud_path_label" />

                <EditText
                    android:id="@+id/cloud_path_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10" >

                    <requestFocus />
                </EditText>
            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <CheckBox
                android:id="@+id/delFileChk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/del_file_chk" />

            <EditText
                android:id="@+id/dayNumEdit"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="false"
                android:inputType="number" />

            <TextView
                android:id="@+id/path_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Days" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/reorgFldChk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reorgFldChk" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:gravity="bottom" >

            <Button
                android:id="@+id/okBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="okOnClick"
                android:text="@android:string/ok" />

            <Button
                android:id="@+id/cancelBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="cancelOnClick"
                android:text="@android:string/cancel" />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>